--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
-      android:textColor="#000"
+      android:textColor="#0f0"
       android:textSize="25sp"/>
 
     <LinearLayout
